# segment-anything-2-real-time

./: README.md  pyproject.toml
demo/: demo.py  webcam_demo.py
