[project]
name = "sam2_realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "setuptools>=61.0",
    "torch>=2.3.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.3.1",
    ]
build-backend = "setuptools.build_meta"
